# key-value.sdk

./: .gitignore  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  PRICING.md  README.md  ROADMAP.md  SECURITY.md  package.json
.github/: CI_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  integration.yml  release.yml
c/: Makefile  README.md
c/examples/: basic_example  basic_example.c  ip_tracker  ip_tracker.c  sensor_dashboard  sensor_dashboard.c
curl/: Makefile  README.md  run.sh
go/: README.md  client.go  go.mod
go/examples/: basic.go
javascript/: README.md  package-lock.json  package.json  tsconfig.json
javascript/examples/: basic.ts  batch.ts  history.ts  patch.ts
javascript/src/: client.ts  index.ts  types.ts
javascript/test/: client.test.ts
python/: MANIFEST.in  README.md  basic_example.py  batch_example.py  clipboard_sync.py  delete_example.py  encrypted_example.py  history_example.py  ip_tracker.py  one_time_secret.py  patch_example.py  requirements.txt  sensor_dashboard.py  sensor_node_example.py  setup.py  signal_generator.py  webhook_receiver.py
python/keyvalue/: __init__.py  client.py  exceptions.py
python/tests/: __init__.py  test_client.py
rust/: Cargo.toml  README.md
rust/examples/: basic.rs  batch.rs
rust/src/: lib.rs
